# spanglish-cli

./: README.md  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 172f90b2a656_adjusted_the_quiz_attempt_to_have_a_.py  1b8e0a9e71a4_remove_words_sentence_and_adjusting_.py  4cef1c079163_added_answer_column_to_quiz_attempt.py  79ec8862fe18_create_initial_tables.py  8916430b80e3_removed_translation_from_words.py  990dfd268d4f_create_quizsession_and_quizattempts_.py  9faf9aa139dd_create_translation_table.py  c6e86b6a5631_create_words_and_verbs_tables.py  d1bcc5bcd523_removed_content_type_and_unified_.py  d6807138982b_create_sentence_table.py  d73b088a93c3_added_contstaint.py  e2bedf1a48ac_creating_dictionary_and_mergedcategory.py
src/: enums.py  main.py  settings.py  templates.py  utils.py
src/commands/: quizes.py  sentences.py  words.py
src/commands/quiz/: factory.py  models.py  start.py
src/db/: base.py  crud.py  models.py
src/dictionary/: __main__.py
src/dictionary/commands/: quizes.py  vocabulary.py
src/dictionary/commands/quiz/: factory.py  scores.py
src/dictionary_app/: __main__.py
src/dictionary_app/commands/: quizes.py  vocabulary.py
src/dictionary_app/commands/quiz/: factory.py  models.py  questions.py
src/progressbars/: quiz.py
